--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Foinni</title>
-	<link rel="stylesheet" type="text/css" href="css/jquery.fancybox.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link href="https://fonts.googleapis.com/css?family=Exo:400,900|Pacifico|Roboto+Slab:100,400|Roboto:100,300,400,500" rel="stylesheet">
+	<link rel="stylesheet" href="css/jquery.fancybox.css">
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/style.css">
 	<meta name="viewport" content="width=device-width">
@@ -137,41 +137,108 @@
 
 		</div>
 	</section>
+
 	<section class="works">
-		<h2>
-			Our Latest Works
-		</h2>
+		<h2>Our Latest Works</h2>
 		<div class="menu-works">
 			<a href="#">All</a>
 			<a href="#">Design</a>
-			<a href="#">Manipulator</a>
+			<a href="#">Manipulation</a>
 			<a href="#">Photography</a>
 			<a href="#">Development</a>
 		</div>
 		<div class="works-block">
-			<a href="img/header.jpg" data-fancybox="gallery">
-				<img src="img/work1.jpg">
+			<a href="img/work1.jpg" data-fancybox="gallery">
+				<img src="img/work1.jpg" alt="">
 			</a>
 			<a href="img/work2.jpg" data-fancybox="gallery">
-				<img src="img/work2.jpg">
+				<img src="img/work2.jpg" alt="">
 			</a>
 			<a href="img/work3.jpg" data-fancybox="gallery">
-				<img src="img/work3.jpg">
+				<img src="img/work3.jpg" alt="">
 			</a>
 		</div>
 		<div class="works-block">
-			<a href="img/header.jpg" data-fancybox="gallery">
-				<img src="img/work1.jpg">
+			<a href="img/work1.jpg" data-fancybox="gallery">
+				<img src="img/work1.jpg" alt="">
 			</a>
 			<a href="img/work2.jpg" data-fancybox="gallery">
-				<img src="img/work2.jpg">
+				<img src="img/work2.jpg" alt="">
 			</a>
 			<a href="img/work3.jpg" data-fancybox="gallery">
-				<img src="img/work3.jpg">
+				<img src="img/work3.jpg" alt="">
 			</a>
 		</div>
 		<a href="#" class="more">See More</a>
 	</section>
+	
+	<section class="pricing">
+		<h2>Our Pricing Plans</h2>
+		<div class="price-block">
+			<div class="price-item">
+				<div class="title">Basic</div>
+				<div class="PriceItemDescription">
+					<div class="price">
+						<sup>$</sup>20<span>/m</span>
+					</div>
+					<p>15 projects</p>
+					<p>30 GB Storage</p>
+					<p>Unlimited Data Transfer</p>
+					<p>50 GB Bandwith</p>
+					<p>24/7 Support</p>
+					<a href="#" class="order">Order Now</a>
+				</div>
+			</div>
+			<div class="price-item">
+				<div class="title">Basic</div>
+				<div class="PriceItemDescription">
+					<div class="price">
+						<sup>$</sup>30<span>/m</span>
+					</div>
+					<p>15 projects</p>
+					<p>30 GB Storage</p>
+					<p>Unlimited Data Transfer</p>
+					<p>50 GB Bandwith</p>
+					<p>24/7 Support</p>
+					<a href="#" class="order">Order Now</a>
+				</div>
+			</div>
+			<div class="price-item">
+				<div class="title">Basic</div>
+				<div class="PriceItemDescription">
+					<div class="price">
+						<sup>$</sup>40<span>/m</span>
+					</div>
+					<p>15 projects</p>
+					<p>30 GB Storage</p>
+					<p>Unlimited Data Transfer</p>
+					<p>50 GB Bandwith</p>
+					<p>24/7 Support</p>
+					<a href="#" class="order">Order Now</a>
+				</div>
+			</div>
+			<div class="price-item">
+				<div class="title">Basic</div>
+				<div class="PriceItemDescription">
+					<div class="price">
+						<sup>$</sup>50<span>/m</span>
+					</div>
+					<p>15 projects</p>
+					<p>30 GB Storage</p>
+					<p>Unlimited Data Transfer</p>
+					<p>50 GB Bandwith</p>
+					<p>24/7 Support</p>
+					<a href="#" class="order">Order Now</a>
+				</div>
+			</div>
+			
+		</div>
+
+
+	</section>
+	
+
+
 	<script src="http://code.jquery.com/jquery.js"></script>
 	<script src="js/jquery.fancybox.js"></script>
 	<script>
