--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <body>
 	<div class="wrapper">
 		<header>
+			<div></div>
 			<div class="logo">
 				<h1>SamuilGelb</h1>
 				<h2>portfolio</h2>
